--- a/catalog.html
+++ b/catalog.html
@@ -174,7 +174,7 @@
                 <h1 class="catalog-page__title">Каталог продукции</h1>
                 <div class="catalog-page__items">
                     <div class="catalog-page__item">
-                        <a href="#" class="catalog-page__image">
+                        <a href="product.html" class="catalog-page__image">
                             <img src="img/catalog-page.png" alt="">
                         </a>
                         <div class="catalog-page__type">Мембрана</div>
@@ -182,7 +182,7 @@
                         <div class="catalog-page__price">54,00 €</div>
                     </div>
                     <div class="catalog-page__item">
-                        <a href="#" class="catalog-page__image">
+                        <a href="product.html" class="catalog-page__image">
                             <img src="img/catalog-page.png" alt="">
                         </a>
                         <div class="catalog-page__type">Мембрана</div>
@@ -190,7 +190,7 @@
                         <div class="catalog-page__price">54,00 €</div>
                     </div>
                     <div class="catalog-page__item">
-                        <a href="#" class="catalog-page__image">
+                        <a href="product.html" class="catalog-page__image">
                             <img src="img/catalog-page.png" alt="">
                         </a>
                         <div class="catalog-page__type">Мембрана</div>
@@ -198,7 +198,7 @@
                         <div class="catalog-page__price">54,00 €</div>
                     </div>
                     <div class="catalog-page__item">
-                        <a href="#" class="catalog-page__image">
+                        <a href="product.html" class="catalog-page__image">
                             <img src="img/catalog-page.png" alt="">
                         </a>
                         <div class="catalog-page__type">Мембрана</div>
@@ -206,7 +206,7 @@
                         <div class="catalog-page__price">54,00 €</div>
                     </div>
                     <div class="catalog-page__item">
-                        <a href="#" class="catalog-page__image">
+                        <a href="product.html" class="catalog-page__image">
                             <img src="img/catalog-page.png" alt="">
                         </a>
                         <div class="catalog-page__type">Мембрана</div>
@@ -214,7 +214,7 @@
                         <div class="catalog-page__price">54,00 €</div>
                     </div>
                     <div class="catalog-page__item">
-                        <a href="#" class="catalog-page__image">
+                        <a href="product.html" class="catalog-page__image">
                             <img src="img/catalog-page.png" alt="">
                         </a>
                         <div class="catalog-page__type">Мембрана</div>
@@ -222,7 +222,7 @@
                         <div class="catalog-page__price">54,00 €</div>
                     </div>
                     <div class="catalog-page__item">
-                        <a href="#" class="catalog-page__image">
+                        <a href="product.html" class="catalog-page__image">
                             <img src="img/catalog-page.png" alt="">
                         </a>
                         <div class="catalog-page__type">Мембрана</div>
@@ -230,7 +230,7 @@
                         <div class="catalog-page__price">54,00 €</div>
                     </div>
                     <div class="catalog-page__item">
-                        <a href="#" class="catalog-page__image">
+                        <a href="product.html" class="catalog-page__image">
                             <img src="img/catalog-page.png" alt="">
                         </a>
                         <div class="catalog-page__type">Мембрана</div>
@@ -238,7 +238,7 @@
                         <div class="catalog-page__price">54,00 €</div>
                     </div>
                     <div class="catalog-page__item">
-                        <a href="#" class="catalog-page__image">
+                        <a href="product.html" class="catalog-page__image">
                             <img src="img/catalog-page.png" alt="">
                         </a>
                         <div class="catalog-page__type">Мембрана</div>
@@ -246,7 +246,7 @@
                         <div class="catalog-page__price">54,00 €</div>
                     </div>
                     <div class="catalog-page__item">
-                        <a href="#" class="catalog-page__image">
+                        <a href="product.html" class="catalog-page__image">
                             <img src="img/catalog-page.png" alt="">
                         </a>
                         <div class="catalog-page__type">Мембрана</div>
