--- a/product.html
+++ b/product.html
@@ -163,7 +163,7 @@
             <ul class="breadcrumbs__items">
                 <li class="breadcrumbs__item">Главная</li>
                 <li class="breadcrumbs__item">Готовые решения</li>
-                <li class="breadcrumbs__item">Террасная доска</li>
+                <li class="breadcrumbs__item">Рулонная кровельная мембрана RUBBERFLEX® RX 5500</li>
             </ul>
         </div>
     </div>
