--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="header__wrapper">
             <ul class="header__menu">
                 <li><a href="#">Главная</a></li>
-                <li><a href="#">Каталог</a></li>
-                <li><a href="#">Готовые решения</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="solutions.html">Готовые решения</a></li>
                 <li><a href="#">О нас</a></li>
                 <li><a href="#">Услуги</a></li>
                 <li><a href="#">Работы</a></li>
