--- a/solution-item.html
+++ b/solution-item.html
@@ -575,7 +575,7 @@
         <div class="popup-order__wrapper">
             <div data-fancybox-close class="popup__close"><img src="img/close.png" alt=""></div>
             <div class="popup__block">
-                <div class="popup__title">Бесплатная консультация</div>
+                <div class="popup__title">Оставить заявку</div>
                 <div class="popup__descr">Перезвоним вам в течение часа и ответим на все вопросы.</div>
                 <div class="popup__form">
                     <div class="popup-order__item">
