--- a/product.html
+++ b/product.html
@@ -821,7 +821,7 @@
                 <img src="img/popup-1.png" alt="">
             </div>
             <div class="popup__block">
-                <div class="popup__title">Бесплатная консультация</div>
+                <div class="popup__title">Оставить заявку</div>
                 <div class="popup__descr">Перезвоним вам в течение часа и ответим на все вопросы.</div>
                 <div class="popup__form">
                     <input type="text" class="popup__input" placeholder="Ваше имя">
