--- a/product.html
+++ b/product.html
@@ -237,7 +237,7 @@
     <section class="video">
         <div class="container">
             <video class="video__item video__off">
-                <source src="img/video.mp4" type="video/mp4" />
+                <source src="img/video.mp4" type="video/mp4" loop autoplay  width='100%' height='100%'/>
             </video>
             <button class="video__play">
                 <img src="img/play.png" alt="">
