--- a/solutions.html
+++ b/solutions.html
@@ -92,7 +92,7 @@
 
         </div>
     </aside>
-    <div class="menu">
+    <div class="menu" id="menu">
         <div class="menu__wrapper">
             <div class="menu__close">
                 <img src="img/close.png" alt="">
