--- a/product.html
+++ b/product.html
@@ -92,7 +92,7 @@
 
         </div>
     </aside>
-    <div class="menu" id="menu">
+    <div class="menu" id="menu"x >
         <div class="menu__wrapper">
             <div class="menu__close">
                 <img src="img/close.png" alt="">
@@ -876,7 +876,10 @@
                     <div class="popup-order__item">
                         <div class="popup-order__item-name">Комментарий</div>
                         <div class="popup-order__item-input popup-order__item-textarea">
-                            <img class="popup-order__icon" src="img/paperclip.png" alt="">
+                            <label for="popup-order__item-file">
+                                <input type="file">
+                                <img class="popup-order__icon" src="img/paperclip.png" alt="">
+                            </label>
                             <textarea type="mail" class="popup__input" placeholder="Введите текст..."></textarea>
                         </div>
                     </div>
