--- a/index.html
+++ b/index.html
@@ -693,9 +693,11 @@
                         <div class="popup-zakaz__block-info">
                             <div class="popup-order__item">
                                 <div class="popup-order__item-input popup-order__item-textarea">
-                                    <img class="popup-order__icon" src="img/paperclip.png" alt="">
-                                    <textarea type="mail" class="popup__input"
-                                        placeholder="Введите текст..."></textarea>
+                                    <label for="popup-order__item-file">
+                                        <input type="file">
+                                        <img class="popup-order__icon" src="img/paperclip.png" alt="">
+                                    </label>
+                                    <textarea type="mail" class="popup__input" placeholder="Введите текст..."></textarea>
                                 </div>
                             </div>
                         </div>
@@ -777,7 +779,10 @@
                     <div class="popup-order__item">
                         <div class="popup-order__item-name">Комментарий</div>
                         <div class="popup-order__item-input popup-order__item-textarea">
-                            <img class="popup-order__icon" src="img/paperclip.png" alt="">
+                            <label for="popup-order__item-file">
+                                <input type="file">
+                                <img class="popup-order__icon" src="img/paperclip.png" alt="">
+                            </label>
                             <textarea type="mail" class="popup__input" placeholder="Введите текст..."></textarea>
                         </div>
                     </div>
